@@ -21,6 +21,8 @@
 - added: `DatabaseBuilder.insert(fn(doc))` can modify a document after `update` or `modify` has `insert` mode
 - added: new directory `schemas` with a new configuration item `directory-schemas'
 - added: new directory `operations` with a new configuration item `directory-operations'
+- added: `String.crc32([unsigned])`
+- added: `U.hash('crc32')` and `U.hash('crc32unsigned')`
 
 - updated: `GROUP()` by adding a new argument `url_prefix`
 - updated: `NEWSCHEMA()` supports `NEWSCHEMA('group/name')`
